made few updates

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="begin">
-      <h4>Payment-Automation</h4>
+      <h4>Payment-Automation <span class="toggle"><i class="bi bi-moon"></i></span></h4>
       <p class="features">
         <span><i class="bi bi-house-door"></i>Overview</span>
         <span><i class="bi bi-journal-bookmark-fill"></i>Repositories</span>
@@ -95,8 +95,8 @@
         <div class="editTicketInput">
           <input class='editTicketValue' type="text"/><button class="btn btn-success save">save</button><button class="btn btn-secondary">cancel</button>
         </div>
-        <label for="ticket description" style="width:100%;margin-top: 20px;">Add description</label>
-        <textarea id="ticket description" style="width:100%;padding-left:5px;" rows="10" placeholder="enter a description"></textarea>
+        <label for="ticketDescription" style="width:100%;margin-top: 20px;">Add description</label>
+        <textarea id="ticketDescription" style="width:100%;padding-left:5px;" rows="10" placeholder="enter a description"></textarea>
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
